--- a/ECF-BACK/composer.json
+++ b/ECF-BACK/composer.json
@@ -73,6 +73,7 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "7.1.*",
         "symfony/maker-bundle": "^1.61"
     }
 }
